topNavBar, markup and icons setting

--- a/index.html
+++ b/index.html
@@ -4,12 +4,55 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- vue.js_cdn_dev_version -->
+  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+  <!-- vue.js_cdn_dev_version -->
+  <!-- font_awesome_cdn -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+  <!-- /font_awesome_cdn -->
   <!-- stylesheet -->
   <link rel="stylesheet" href="dist/app.css">
   <!-- /stylesheet -->
   <title>Ciao</title>
 </head>
 <body>
+  <!-- wrapper -->
+  <div class="wrapper">
+    <!-- header -->
+    <header class="header_section">
+      <!-- top_nav_bar -->
+      <div class="top_nav_bar">
+        <div class="container_l">
+          <div class="phone_number">
+            <i class="fas fa-phone"></i>
+            <p class="calling">Call us for a Free Quote 1.800.555.6789</p>
+          </div>
+          <div class="socials_list">
+            <ul>
+              <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+              <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+              <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- /top_nav_bar -->
+    </header>
+    <!-- /header -->
+    <!-- main -->
+    <main class="main_section">
 
-</body>
+    </main>
+    <!-- /main -->
+    <!-- footer -->
+    <footer class="footer_section">
+
+    </footer>
+    <!-- /footer -->
+  </div>
+  <!-- /wrapper -->
+  <!-- script_file -->
+  <script src="js/script.js" charset="utf-8"></script>
+  <!-- /script_file -->
 </html>
