--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
       <div class="top_nav_bar">
         <div class="container_l">
           <div class="phone_number">
-            <i class="fas fa-phone"></i>
-            <p class="calling">Call us for a Free Quote 1.800.555.6789</p>
+            <i class="fas fa-phone mr-2"></i>
+            <p class="calling mt-1 mb-1">Call us for a Free Quote 1.800.555.6789</p>
           </div>
           <div class="socials_list">
-            <ul>
-              <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-              <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-              <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+            <ul class="mt-1 mb-1">
+              <li><a class="ml-2" href="#"><i class="fab fa-facebook-f"></i></a></li>
+              <li><a class="ml-2" href="#"><i class="fab fa-twitter"></i></a></li>
+              <li><a class="ml-2" href="#"><i class="fab fa-instagram"></i></a></li>
+              <li class="ml-2"><a href="#"><i class="fab fa-youtube"></i></a></li>
             </ul>
           </div>
         </div>
