--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- google_fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+  <!-- /google_fonts -->
   <!-- vue.js_cdn_dev_version -->
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
   <!-- vue.js_cdn_dev_version -->
@@ -13,7 +17,7 @@
   <!-- stylesheet -->
   <link rel="stylesheet" href="dist/app.css">
   <!-- /stylesheet -->
-  <title>Ciao</title>
+  <title>Movers</title>
 </head>
 <body>
   <!-- wrapper -->
@@ -38,6 +42,18 @@
         </div>
       </div>
       <!-- /top_nav_bar -->
+      <div class="wrapper">
+        <!-- bottom_nav_bar -->
+        <div class="bottom_nav_bar container_l mt-2">
+          <div class="logo">
+            <img src="img/avada-movers-retinalogo.png" alt="movers_logo">
+          </div>
+          <div class="menu">
+            ciao
+          </div>
+        </div>
+        <!-- /bottom_nav_bar -->
+      </div>
     </header>
     <!-- /header -->
     <!-- main -->
