bottom nav bar links & button setting

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <header class="header_section">
       <!-- top_nav_bar -->
       <div class="top_nav_bar">
-        <div class="container_l">
-          <div class="phone_number">
+        <div class="container_l nav_Flex">
+          <div class="phone_number flex">
             <i class="fas fa-phone mr-2"></i>
             <p class="calling mt-1 mb-1">Call us for a Free Quote 1.800.555.6789</p>
           </div>
           <div class="socials_list">
-            <ul class="mt-1 mb-1">
+            <ul class="flex mt-1 mb-1">
               <li><a class="ml-2" href="#"><i class="fab fa-facebook-f"></i></a></li>
               <li><a class="ml-2" href="#"><i class="fab fa-twitter"></i></a></li>
               <li><a class="ml-2" href="#"><i class="fab fa-instagram"></i></a></li>
@@ -44,12 +44,24 @@
       <!-- /top_nav_bar -->
       <div class="wrapper">
         <!-- bottom_nav_bar -->
-        <div class="bottom_nav_bar container_l mt-2">
+        <div class="bottom_nav_bar container_l nav_Flex">
+          <!-- logo -->
           <div class="logo">
             <img src="img/avada-movers-retinalogo.png" alt="movers_logo">
           </div>
-          <div class="menu">
-            ciao
+          <!-- /logo -->
+          <div class="menu flex">
+            <!-- links -->
+            <ul class="flex">
+              <li class="ml-6"><a href="#"></a>Home</li>
+              <li class="ml-6"><a href="#"></a>Raters</li>
+              <li class="ml-6"><a href="#"></a>Testimonials</li>
+              <li class="ml-6"><a href="#"></a>FAQ</li>
+              <li class="ml-6"><a href="#"></a>Blog</li>
+              <li class="ml-6"><a href="#"></a>Contact</li>
+            </ul>
+            <button class="ml-6" type="button" name="button">FREE QUOTE</button>
+            <!-- /links -->
           </div>
         </div>
         <!-- /bottom_nav_bar -->
