hero container setted and styled

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         </div>
       </div>
       <!-- /top_nav_bar -->
-      <div class="wrapper">
+      <div class="hero_wrapper">
         <!-- bottom_nav_bar -->
         <div class="bottom_nav_bar container_l nav_Flex">
           <!-- logo -->
-          <div class="logo">
+          <div class="logo flex_al">
             <img src="img/avada-movers-retinalogo.png" alt="movers_logo">
           </div>
           <!-- /logo -->
@@ -60,11 +60,20 @@
               <li class="ml-6"><a href="#"></a>Blog</li>
               <li class="ml-6"><a href="#"></a>Contact</li>
             </ul>
-            <button class="ml-6" type="button" name="button">FREE QUOTE</button>
+            <button class="ml-6" type="button" name="button">free quote</button>
             <!-- /links -->
           </div>
         </div>
         <!-- /bottom_nav_bar -->
+        <!-- hero -->
+        <div class="hero_section flex_al">
+          <div class="container_m txt_center">
+            <p>moving without the hassle</p>
+            <h1 class="mt-2 mb-2">we make it simple</h1>
+            <p>professional service with quality and customer satisfaction</p>
+          </div>
+        </div>
+        <!-- /hero -->
       </div>
     </header>
     <!-- /header -->
