fix: hero container in position absolute

--- a/index.html
+++ b/index.html
@@ -66,14 +66,17 @@
         </div>
         <!-- /bottom_nav_bar -->
         <!-- hero -->
-        <div class="hero_section flex_al">
           <div class="container_m txt_center">
             <p>moving without the hassle</p>
             <h1 class="mt-2 mb-2">we make it simple</h1>
             <p>professional service with quality and customer satisfaction</p>
           </div>
-        </div>
         <!-- /hero -->
+        <!-- cta -->
+        <div class="cta_section">
+
+        </div>
+        <!-- /cta -->
       </div>
     </header>
     <!-- /header -->
