fix: links in bottom nav bar

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
           <div class="menu flex">
             <!-- links -->
             <ul class="flex">
-              <li class="ml-6"><a href="#"></a>Home</li>
-              <li class="ml-6"><a href="#"></a>Raters</li>
-              <li class="ml-6"><a href="#"></a>Testimonials</li>
-              <li class="ml-6"><a href="#"></a>FAQ</li>
-              <li class="ml-6"><a href="#"></a>Blog</li>
-              <li class="ml-6"><a href="#"></a>Contact</li>
+              <li class="ml-6"><a href="#">Home</a></li>
+              <li class="ml-6"><a href="#">Raters</a></li>
+              <li class="ml-6"><a href="#">Testimonials</a></li>
+              <li class="ml-6"><a href="#">FAQ</a></li>
+              <li class="ml-6"><a href="#">Blog</a></li>
+              <li class="ml-6"><a href="#">Contact</a></li>
             </ul>
             <button class="ml-6" type="button" name="button">free quote</button>
             <!-- /links -->
