header cta setted and styled

--- a/index.html
+++ b/index.html
@@ -72,12 +72,13 @@
             <p>professional service with quality and customer satisfaction</p>
           </div>
         <!-- /hero -->
-        <!-- cta -->
-        <div class="cta_section">
-
-        </div>
-        <!-- /cta -->
       </div>
+      <!-- cta -->
+      <div class="cta_section flex">
+        <i class="far fa-paper-plane mr-2"></i>
+        <p class="mt-8 mb-8">get a free quote online now!</p>
+      </div>
+      <!-- /cta -->
     </header>
     <!-- /header -->
     <!-- main -->
