upper footer setted & styled

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
           <div class="menu flex">
             <!-- links -->
             <ul class="flex">
-              <li class="ml-6"><a href="#">Home</a></li>
-              <li class="ml-6"><a href="#">Raters</a></li>
-              <li class="ml-6"><a href="#">Testimonials</a></li>
+              <li class="ml-6"><a href="#">home</a></li>
+              <li class="ml-6"><a href="#">raters</a></li>
+              <li class="ml-6"><a href="#">testimonials</a></li>
               <li class="ml-6"><a href="#">FAQ</a></li>
-              <li class="ml-6"><a href="#">Blog</a></li>
-              <li class="ml-6"><a href="#">Contact</a></li>
+              <li class="ml-6"><a href="#">blog</a></li>
+              <li class="ml-6"><a href="#">contact</a></li>
             </ul>
             <button class="ml-6" type="button" name="button">free quote</button>
             <!-- /links -->
@@ -91,17 +91,88 @@
       <div class="top_footer">
         <div class="container_l">
           <div class="box">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <h4>about</h4>
+            <div class="par_mage flex_col">
+              <p class="mr-8">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+              <div class="logo flex_al">
+                <img src="img/avada-movers-retinalogo.png" alt="movers_logo">
+              </div>
+            </div>
           </div>
           <div class="box">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <h4>avada movers</h4>
+            <ul class="flex_col">
+              <li>
+                <a href="#">
+                  <i class="fas fa-chevron-right"></i>
+                  home
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fas fa-chevron-right"></i>
+                  rates
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fas fa-chevron-right"></i>
+                  testimonials
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fas fa-chevron-right"></i>
+                  blog
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fas fa-chevron-right"></i>
+                  free quote
+                </a>
+              </li>
+            </ul>
           </div>
           <div class="box">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <h4>recent posts</h4>
+            <ul class="flex_col">
+              <li>
+                <a href="#">
+                  <i class="fas fa-chevron-right"></i>
+                  heading out to collage?
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fas fa-chevron-right"></i>
+                  moving your business?
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fas fa-chevron-right"></i>
+                  outstanding quality?
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fas fa-chevron-right"></i>
+                  cost of moving?
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <i class="fas fa-chevron-right"></i>
+                  best moving tips?
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
       <div class="bottom_footer">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div>
     </footer>
     <!-- /footer -->
