bottom footer - upper sec setted and styled

--- a/index.html
+++ b/index.html
@@ -172,7 +172,34 @@
         </div>
       </div>
       <div class="bottom_footer">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <div class="upper_sec">
+          <ul class="flex pt-5">
+            <li class="pr-2 mr-2">
+              <a href="#">
+                <i class="far fa-copyright"></i>
+                copiright 2012 - 2020
+              </a>
+            </li>
+            <li class="pr-2 mr-2">
+              <a href="#">
+                avada theme by theme fusion
+              </a>
+            </li>
+            <li class="pr-2 mr-2">
+              <a href="#">
+                all rights reserved
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                powered by word press
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="lower_sec">
+
+        </div>
       </div>
     </footer>
     <!-- /footer -->
