bottom footer - lower sec setted and styled

--- a/index.html
+++ b/index.html
@@ -198,7 +198,12 @@
           </ul>
         </div>
         <div class="lower_sec">
-
+          <ul class="flex mt-5 pb-6">
+            <li><a class="ml-2" href="#"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a class="ml-2" href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a class="ml-2" href="#"><i class="fab fa-instagram"></i></a></li>
+            <li class="ml-2"><a href="#"><i class="fab fa-youtube"></i></a></li>
+          </ul>
         </div>
       </div>
     </footer>
