--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="menu flex">
             <!-- links -->
             <ul class="flex">
-              <li class="ml-6" v-for="item in bottomNavLinks"><a href="#">{{item.title}}</a></li>
+              <li class="ml-6" v-for="(item,index) in avadaLinks" v-if="index <= 5"><a href="#">{{item.title}}</a></li>
               <!-- <li class="ml-6"><a href="#">home</a></li>
               <li class="ml-6"><a href="#">raters</a></li>
               <li class="ml-6"><a href="#">testimonials</a></li>
@@ -103,36 +103,12 @@
           <div class="box">
             <h4>avada movers</h4>
             <ul class="flex_col">
-              <li>
-                <a href="#">
-                  <i class="fas fa-chevron-right"></i>
-                  home
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fas fa-chevron-right"></i>
-                  rates
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fas fa-chevron-right"></i>
-                  testimonials
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fas fa-chevron-right"></i>
-                  blog
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fas fa-chevron-right"></i>
-                  free quote
-                </a>
-              </li>
+              <li v-for="(item,index) in avadaLinks" v-if="index !=3 && index !=5"><a href="#"><i class="fas fa-chevron-right"></i>{{item.title}}</a></li>
+              <!-- <li><a href="#"><i class="fas fa-chevron-right"></i>home</a></li>
+              <li><a href="#"><i class="fas fa-chevron-right"></i>rates</a></li>
+              <li><a href="#"><i class="fas fa-chevron-right"></i>testimonials</a></li>
+              <li><a href="#"><i class="fas fa-chevron-right"></i>blog</a></li>
+              <li><a href="#"><i class="fas fa-chevron-right"></i>free quote</a></li> -->
             </ul>
           </div>
           <div class="box">
