Vue dynamic recentPost (top_footer)

--- a/index.html
+++ b/index.html
@@ -103,47 +103,23 @@
           <div class="box">
             <h4>avada movers</h4>
             <ul class="flex_col">
-              <li v-for="(item,index) in avadaLinks" v-if="index !=3 && index !=5"><a href="#"><i class="fas fa-chevron-right"></i>{{item.title}}</a></li>
-              <!-- <li><a href="#"><i class="fas fa-chevron-right"></i>home</a></li>
-              <li><a href="#"><i class="fas fa-chevron-right"></i>rates</a></li>
-              <li><a href="#"><i class="fas fa-chevron-right"></i>testimonials</a></li>
-              <li><a href="#"><i class="fas fa-chevron-right"></i>blog</a></li>
-              <li><a href="#"><i class="fas fa-chevron-right"></i>free quote</a></li> -->
+              <li v-for="(item,index) in avadaLinks" v-if="index !=3 && index !=5"><a href="#"><i class="fas fa-chevron-right pr-1"></i>{{item.title}}</a></li>
+              <!-- <li><a href="#"><i class="fas fa-chevron-right pr-1"></i>home</a></li>
+              <li><a href="#"><i class="fas fa-chevron-right pr-1"></i>rates</a></li>
+              <li><a href="#"><i class="fas fa-chevron-right pr-1"></i>testimonials</a></li>
+              <li><a href="#"><i class="fas fa-chevron-right pr-1"></i>blog</a></li>
+              <li><a href="#"><i class="fas fa-chevron-right pr-1"></i>free quote</a></li> -->
             </ul>
           </div>
           <div class="box">
             <h4>recent posts</h4>
             <ul class="flex_col">
-              <li>
-                <a href="#">
-                  <i class="fas fa-chevron-right"></i>
-                  heading out to collage?
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fas fa-chevron-right"></i>
-                  moving your business?
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fas fa-chevron-right"></i>
-                  outstanding quality?
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fas fa-chevron-right"></i>
-                  cost of moving?
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="fas fa-chevron-right"></i>
-                  best moving tips?
-                </a>
-              </li>
+              <li v-for="item in recentPost"><a href="#"><i class="fas fa-chevron-right pr-1"></i>{{item.title}}</a></li>
+              <!-- <li><a href="#"><i class="fas fa-chevron-right pr-1"></i>heading out to collage?</a></li>
+              <li><a href="#"><i class="fas fa-chevron-right pr-1"></i>moving your business?</a></li>
+              <li><a href="#"><i class="fas fa-chevron-right pr-1"></i>outstanding quality</a></li>
+              <li><a href="#"><i class="fas fa-chevron-right pr-1"></i>cost of moving</a></li>
+              <li><a href="#"><i class="fas fa-chevron-right pr-1"></i>best moving tips</a></li> -->
             </ul>
           </div>
         </div>
