--- a/index.html
+++ b/index.html
@@ -127,27 +127,11 @@
       <div class="bottom_footer">
         <div class="upper_sec">
           <ul class="flex pt-5">
-            <li class="pr-2 mr-2">
-              <a href="#">
-                <i class="far fa-copyright"></i>
-                copiright 2012 - 2020
-              </a>
-            </li>
-            <li class="pr-2 mr-2">
-              <a href="#">
-                avada theme by theme fusion
-              </a>
-            </li>
-            <li class="pr-2 mr-2">
-              <a href="#">
-                all rights reserved
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                powered by word press
-              </a>
-            </li>
+            <li v-for="item in credits" class="pr-2 mr-2"><a href="#"><i class="far fa-copyright pr-1"></i>{{item.title}}</a></li>
+            <!-- <li class="pr-2 mr-2"><a href="#"><i class="far fa-copyright pr-1"></i>copiright 2012 - 2020</a></li>
+            <li class="pr-2 mr-2"><a href="#">avada theme by theme fusion</a></li>
+            <li class="pr-2 mr-2"><a href="#">all rights reserved</a></li>
+            <li><a href="#">powered by word press</a></li> -->
           </ul>
         </div>
         <div class="lower_sec">
