--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
           </div>
           <div class="socials_list">
             <ul class="flex mt-1 mb-1">
-              <li><a class="ml-2" href="#"><i class="fab fa-facebook-f"></i></a></li>
+              <li v-for="item in icons"><a class="ml-2" href="#"><i :class="`fab fa-${item.icon}`"></i></a></li>
+              <!-- <li><a class="ml-2" href="#"><i class="fab fa-facebook-f"></i></a></li>
               <li><a class="ml-2" href="#"><i class="fab fa-twitter"></i></a></li>
               <li><a class="ml-2" href="#"><i class="fab fa-instagram"></i></a></li>
-              <li class="ml-2"><a href="#"><i class="fab fa-youtube"></i></a></li>
+              <li class="ml-2"><a href="#"><i class="fab fa-youtube"></i></a></li> -->
             </ul>
           </div>
         </div>
@@ -136,10 +137,11 @@
         </div>
         <div class="lower_sec">
           <ul class="flex mt-5 pb-6">
-            <li><a class="ml-2" href="#"><i class="fab fa-facebook-f"></i></a></li>
+            <li v-for="item in icons"><a class="ml-2" href="#"><i :class="`fab fa-${item.icon}`"></i></a></li>
+            <!-- <li><a class="ml-2" href="#"><i class="fab fa-facebook-f"></i></a></li>
             <li><a class="ml-2" href="#"><i class="fab fa-twitter"></i></a></li>
             <li><a class="ml-2" href="#"><i class="fab fa-instagram"></i></a></li>
-            <li class="ml-2"><a href="#"><i class="fab fa-youtube"></i></a></li>
+            <li class="ml-2"><a href="#"><i class="fab fa-youtube"></i></a></li> -->
           </ul>
         </div>
       </div>
