setting par (above_below_title) 4 all main sections

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
         <!-- /bottom_nav_bar -->
         <!-- hero -->
           <div class="container_m txt_center">
-            <p>moving without the hassle</p>
+            <p class="above_below_title">moving without the hassle</p>
             <h1 class="mt-2 mb-2">we make it simple</h1>
-            <p>professional service with quality and customer satisfaction</p>
+            <p class="above_below_title">professional service with quality and customer satisfaction</p>
           </div>
         <!-- /hero -->
       </div>
@@ -84,23 +84,53 @@
     </header>
     <!-- /header -->
     <!-- main -->
-    <main class="main_section">
+    <main class="main_section txt_center">
+      <!-- first_section -->
+      <div class="first_section container_m">
+        <p class="above_below_title">headache free</p>
+        <h2>award winning moving company</h2>
+        <p class="smooth_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <button type="button" name="button">read our testimonials</button>
+      </div>
+      <!-- /first_section -->
+      <!-- second_section -->
+      <div class="second_section">
+        <p class="above_below_title">we are professional</p>
+      </div>
+      <!-- /second_section -->
+      <!-- third_section -->
+      <div class="third_section">
 
+      </div>
+      <!-- /third_section -->
+      <!-- fourth_section -->
+      <div class="fourth_section">
+        <p class="above_below_title">happy customers</p>
+      </div>
+      <!-- /fourth_section -->
+      <!-- fifth_section -->
+      <div class="fifth_section">
+
+      </div>
+      <!-- /fifth_section -->
     </main>
     <!-- /main -->
     <!-- footer -->
     <footer class="footer_section">
       <div class="top_footer">
         <div class="container_l">
+          <!-- box_1 -->
           <div class="box">
             <h4>about</h4>
             <div class="par_mage flex_col">
-              <p class="mr-8">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+              <p class="smooth_par mr-8">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
               <div class="logo flex_al">
                 <img src="img/avada-movers-retinalogo.png" alt="movers_logo">
               </div>
             </div>
           </div>
+          <!-- /box_1 -->
+          <!-- box_2 -->
           <div class="box">
             <h4>avada movers</h4>
             <ul class="flex_col">
@@ -112,6 +142,8 @@
               <li><a href="#"><i class="fas fa-chevron-right pr-1"></i>free quote</a></li> -->
             </ul>
           </div>
+          <!-- /box_2 -->
+          <!-- box_3 -->
           <div class="box">
             <h4>recent posts</h4>
             <ul class="flex_col">
@@ -123,6 +155,7 @@
               <li><a href="#"><i class="fas fa-chevron-right pr-1"></i>best moving tips</a></li> -->
             </ul>
           </div>
+          <!-- /box_3 -->
         </div>
       </div>
       <div class="bottom_footer">
