1,2,4,5 sec h2 setted and styled

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <!-- first_section -->
       <div class="first_section container_m">
         <p class="above_below_title">headache free</p>
-        <h2 class="section_title">award winning moving company</h2>
+        <h2 class="section_title">award winning <br> moving company</h2>
         <p class="smooth_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         <button type="button" name="button">read our testimonials</button>
       </div>
@@ -130,13 +130,14 @@
             xxx
           </div>
         </div>
+        <button type="button" name="button">read our testimonials</button>
       </div>
       <!-- /fourth_section -->
       <!-- fifth_section -->
       <div class="fifth_section container_m">
         <h2 class="section_title">request a free quote</h2>
         <p class="smooth_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <button type="button" name="button">read our testimonials</button>
+        <button type="button" name="button">click here</button>
       </div>
       <!-- /fifth_section -->
     </main>
