--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       </div>
       <!-- /fourth_section -->
       <!-- fifth_section -->
-      <div class="fifth_section container_m">
+      <div class="fifth_section container_m pt-15">
         <h2 class="section_title">request a free quote</h2>
         <p class="smooth_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         <button type="button" name="button">click here</button>
@@ -147,7 +147,7 @@
       <div class="top_footer">
         <div class="container_l">
           <!-- box_1 -->
-          <div class="box">
+          <div class="box mt-8 mb-8">
             <h4>about</h4>
             <div class="par_mage flex_col">
               <p class="smooth_par mr-8">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
@@ -158,7 +158,7 @@
           </div>
           <!-- /box_1 -->
           <!-- box_2 -->
-          <div class="box">
+          <div class="box mt-8 mb-8">
             <h4>avada movers</h4>
             <ul class="flex_col">
               <li v-for="(item,index) in avadaLinks" v-if="index !=3 && index !=5"><a href="#"><i class="fas fa-chevron-right pr-1"></i>{{item.title}}</a></li>
@@ -171,7 +171,7 @@
           </div>
           <!-- /box_2 -->
           <!-- box_3 -->
-          <div class="box">
+          <div class="box mt-8 mb-8">
             <h4>recent posts</h4>
             <ul class="flex_col">
               <li v-for="item in recentPost"><a href="#"><i class="fas fa-chevron-right pr-1"></i>{{item.title}}</a></li>
