second section imgs setted

--- a/index.html
+++ b/index.html
@@ -86,11 +86,13 @@
     <!-- main -->
     <main class="main_section txt_center">
       <!-- first_section -->
-      <div class="first_section container_m">
-        <p class="above_below_title">headache free</p>
-        <h2 class="section_title">award winning <br> moving company</h2>
-        <p class="smooth_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <button type="button" name="button">read our testimonials</button>
+      <div class="first_section_wrapper">
+        <div class="first_section container_m">
+          <p class="above_below_title">headache free</p>
+          <h2 class="section_title">award winning <br> moving company</h2>
+          <p class="smooth_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <button type="button" name="button">read our testimonials</button>
+        </div>
       </div>
       <!-- /first_section -->
       <!-- second_section -->
@@ -99,13 +101,13 @@
         <h2 class="section_title">full-service solution</h2>
         <div class="flex_boxes">
           <div class="box">
-            xxx
+            <img src="img/avada-movers-serviceonephoto-final-600x383.jpg" alt="logo_image">
           </div>
           <div class="box">
-            xxx
+            <img src="img/avada-movers-servicetwophoto-final-600x383.jpg" alt="logo_image">
           </div>
           <div class="box">
-            xxx
+            <img src="img/avada-movers-servicethreephoto-final.jpg" alt="logo_image">
           </div>
         </div>
       </div>
@@ -116,28 +118,32 @@
       </div>
       <!-- /third_section -->
       <!-- fourth_section -->
-      <div class="fourth_section container_l">
-        <p class="above_below_title">happy customers</p>
-        <h2 class="section_title">testimonials</h2>
-        <div class="flex_boxes">
-          <div class="box">
-            xxx
+      <div class="fourth_section_wrapper">
+        <div class="fourth_section container_l">
+          <p class="above_below_title">happy customers</p>
+          <h2 class="section_title">testimonials</h2>
+          <div class="flex_boxes">
+            <div class="box">
+              xxx
+            </div>
+            <div class="box">
+              xxx
+            </div>
+            <div class="box">
+              xxx
+            </div>
           </div>
-          <div class="box">
-            xxx
-          </div>
-          <div class="box">
-            xxx
-          </div>
+          <button type="button" name="button">read our testimonials</button>
         </div>
-        <button type="button" name="button">read our testimonials</button>
       </div>
       <!-- /fourth_section -->
       <!-- fifth_section -->
-      <div class="fifth_section container_m pt-15">
-        <h2 class="section_title">request a free quote</h2>
-        <p class="smooth_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <button type="button" name="button">click here</button>
+      <div class="fifth_section_wrapper">
+        <div class="fifth_section container_m pt-15">
+          <h2 class="section_title">request a free quote</h2>
+          <p class="smooth_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+          <button type="button" name="button">click here</button>
+        </div>
       </div>
       <!-- /fifth_section -->
     </main>
