testimonials_section imgs setted

--- a/index.html
+++ b/index.html
@@ -117,26 +117,26 @@
 
       </div>
       <!-- /third_section -->
-      <!-- fourth_section -->
+      <!-- testimonials_section -->
       <div class="fourth_section_wrapper">
         <div class="fourth_section container_l">
           <p class="above_below_title">happy customers</p>
           <h2 class="section_title">testimonials</h2>
           <div class="flex_boxes">
             <div class="box">
-              xxx
+              <img src="img/avada-movers-johndoe-final.jpg" alt="johndoe_photo">
             </div>
             <div class="box">
-              xxx
+              <img src="img/avada-movers-janedoe-final.jpg" alt="janedoe_photo">
             </div>
             <div class="box">
-              xxx
+              <img src="img/avada-movers-johnsmith-final.jpg" alt="th_photo">
             </div>
           </div>
           <button type="button" name="button">read our testimonials</button>
         </div>
       </div>
-      <!-- /fourth_section -->
+      <!-- /testimonials_section -->
       <!-- fifth_section -->
       <div class="fifth_section_wrapper">
         <div class="fifth_section container_m pt-15">
