--- a/index.html
+++ b/index.html
@@ -95,23 +95,26 @@
         </div>
       </div>
       <!-- /first_section -->
-      <!-- second_section -->
+      <!-- professionals_section -->
       <div class="second_section container_l">
         <p class="above_below_title">we are professional</p>
         <h2 class="section_title">full-service solution</h2>
         <div class="flex_boxes">
           <div class="box">
             <img src="img/avada-movers-serviceonephoto-final-600x383.jpg" alt="logo_image">
+            <h3 class="third_title">two man teams</h3>
           </div>
           <div class="box">
             <img src="img/avada-movers-servicetwophoto-final-600x383.jpg" alt="logo_image">
+            <h3 class="third_title">we do all the lifting</h3>
           </div>
           <div class="box">
             <img src="img/avada-movers-servicethreephoto-final.jpg" alt="logo_image">
+            <h3 class="third_title">coast to coast</h3>
           </div>
         </div>
       </div>
-      <!-- /second_section -->
+      <!-- /professionals_section -->
       <!-- third_section -->
       <div class="third_section">
 
@@ -125,12 +128,15 @@
           <div class="flex_boxes">
             <div class="box">
               <img src="img/avada-movers-johndoe-final.jpg" alt="johndoe_photo">
+              <h3 class="third_title">john doe</h3>
             </div>
             <div class="box">
               <img src="img/avada-movers-janedoe-final.jpg" alt="janedoe_photo">
+              <h3 class="third_title">jane doe</h3>
             </div>
             <div class="box">
               <img src="img/avada-movers-johnsmith-final.jpg" alt="th_photo">
+              <h3 class="third_title">john smith</h3>
             </div>
           </div>
           <button type="button" name="button">read our testimonials</button>
