add paragraph in professionals&testimonials sections

--- a/index.html
+++ b/index.html
@@ -103,14 +103,20 @@
           <div class="box">
             <img src="img/avada-movers-serviceonephoto-final-600x383.jpg" alt="logo_image">
             <h3 class="third_title">two man teams</h3>
+            <p class="smooth_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <button type="button" name="button">read more</button>
           </div>
           <div class="box">
             <img src="img/avada-movers-servicetwophoto-final-600x383.jpg" alt="logo_image">
             <h3 class="third_title">we do all the lifting</h3>
+            <p class="smooth_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <button type="button" name="button">read more</button>
           </div>
           <div class="box">
             <img src="img/avada-movers-servicethreephoto-final.jpg" alt="logo_image">
             <h3 class="third_title">coast to coast</h3>
+            <p class="smooth_par">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <button type="button" name="button">read more</button>
           </div>
         </div>
       </div>
@@ -129,14 +135,17 @@
             <div class="box">
               <img src="img/avada-movers-johndoe-final.jpg" alt="johndoe_photo">
               <h3 class="third_title">john doe</h3>
+              <p class="smooth_par">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
             </div>
             <div class="box">
               <img src="img/avada-movers-janedoe-final.jpg" alt="janedoe_photo">
               <h3 class="third_title">jane doe</h3>
+              <p class="smooth_par">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
             </div>
             <div class="box">
               <img src="img/avada-movers-johnsmith-final.jpg" alt="th_photo">
               <h3 class="third_title">john smith</h3>
+              <p class="smooth_par">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
             </div>
           </div>
           <button type="button" name="button">read our testimonials</button>
